# table_extractor

./: CMakeLists.txt  Dockerfile  README.md  config.yaml  mongo.py  package.xml  rosparam.yaml  run_table_extractor.sh  sasha_run_table_extractor.sh  table_extractor.py  table_map.pgm  table_viewpoint.py
msg/: Table.msg  TableViewpoints.msg
scripts/: mongo.py  print_patrolling.py  read_rosbag.py  region_growing.py  region_growing_by_distance.py  statemachine.py  table_extractor_script.py  table_viewpoint.py  tspsolver.py  visualize_tables.py
