<?xml version="1.0"?>
<package>
  <name>table_extractor</name>
  <version>0.0.0</version>
  <description>The table_extractor package</description>

  <maintainer email="markus.j.leitner@acin.tuwien.ac.at">Markus Leitner</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>




</package>

