<?xml version="1.0"?>
<package format="2">
  <name>table_extractor</name>
  <version>0.0.0</version>
  <description>The table_extractor package</description>

  <maintainer email="markus.j.leitner@acin.tuwien.ac.at">Markus Leitner</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>edith_msgs</depend>




</package>

